--- a/src/assets/json/ref-config.json
+++ b/src/assets/json/ref-config.json
@@ -2,19 +2,13 @@
     "ref-1": {
         "name": "BMW M235i Dreh",
         "info": "Cut by me | Footage by exportlater",
-        "link": "BMW M235i Dreh",
+        "img": "assets/img/work/M235i_Night-1-2.jpg",
         "isWeb": "0"
     },
     "ref-2": {
         "name": "BMW M235i Dreh",
         "info": "Cut by me | Footage by exportlater",
-        "link": "BMW M235i Dreh",
-        "isWeb": "1"
-    },
-    "ref-3": {
-        "name": "Yaeow Lyrics Video",
-        "info": "Cut by me | Footage by exportlater",
-        "link": "BMW M235i Dreh",
+        "img": "assets/img/work/M235i_Night-1-2.jpg",
         "isWeb": "1"
     }
 }
