--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "http-proxy": "^1.18.1",
     "nconf": "^0.11.3",
     "nodemon": "^2.0.15"
   }
