--- a/src/json/config/config.example.json
+++ b/src/json/config/config.example.json
@@ -28,7 +28,8 @@
             "redesign": "redesign",
             "subscriptor": "subscriptor",
             "veryeasycalculator": "veryeasycalculator",
-            "cookieclicker": "cookiecliker"
+            "cookieclicker": "cookiecliker",
+            "mittelbot": "mittelbot"
         },
         "impressum": "impressum",
         "privacy": "privacy"
