added new project

--- a/src/json/config/config.example.json
+++ b/src/json/config/config.example.json
@@ -29,7 +29,8 @@
             "subscriptor": "subscriptor",
             "veryeasycalculator": "veryeasycalculator",
             "cookieclicker": "cookiecliker",
-            "mittelbot": "mittelbot"
+            "mittelbot": "mittelbot",
+            "la_campana_unofficial_design": "la_campana_unofficial_design"
         },
         "impressum": "impressum",
         "privacy": "privacy"
