Added: First steps to sub domain

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ src/json/config/config.json
 
 .htaccess
 .git/
+
+
+
+#==============================================================================
+
+
+#SUB DOMAINS
+mido-website/
