--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "nconf": "^0.12.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "vhost": "^3.0.2"
   }
 }
