--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "ejs": "^3.1.7",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "express-subdomain": "^1.0.5",
     "nconf": "^0.12.0",
-    "nodemon": "^2.0.15",
-    "vhost": "^3.0.2"
+    "nodemon": "^2.0.15"
   }
 }
