--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon server.js",
     "prod": "pm2 start server.js --name BlackDayzHomepage --max-memory-restart 300M && pm2 monit",
-    "kill": "pm2 delete BlackDayzHomepage"
+    "kill": "pm2 delete BlackDayzHomepage",
+    "restart": "npm run kill && npm run prod"
   },
   "repository": {
     "type": "git",
