Added: Mittelbot logo

--- a/src/json/config/config.example.json
+++ b/src/json/config/config.example.json
@@ -83,6 +83,10 @@
         "phenixgames_logo": {
             "name": "phenixgames",
             "path": "img/pg_logo"
+        },
+        "mittelbot_logo": {
+            "name": "mittelbot",
+            "path": "img/mittelbot_logo"
         }
     }
 }
