update/newest dep versions

--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
         "express": "^4.18.2",
         "express-session": "^1.17.2",
         "express-subdomain": "^1.0.5",
-        "nconf": "^0.12.0"
+        "nconf": "^0.12.0",
+        "vanta": "^0.5.24"
     },
     "devDependencies": {
-        "prettier": "^2.7.1",
-        "nodemon": "^2.0.20"
+        "nodemon": "^2.0.20",
+        "prettier": "^2.7.1"
     }
 }
