--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "homepage": "https://github.com/BlackDayz/BlackDayz-Homepage#readme",
     "dependencies": {
         "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
         "ejs": "^3.1.7",
         "express": "^4.18.2",
         "express-session": "^1.17.2",
@@ -30,7 +31,7 @@
         "nconf": "^0.12.0"
     },
     "devDependencies": {
-        "prettier": "^2.7.1",
-        "nodemon": "^2.0.20"
+        "nodemon": "^2.0.20",
+        "prettier": "^2.7.1"
     }
 }
