fix/remove files from git

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "test:unit": "vue-cli-service test:unit",
         "lint": "vue-cli-service lint",
         "format": "prettier --write . --bracket-same-line=true",
-        "check": "prettier --check . --bracket-same-line=true",
-        "deploy": "node scripts/gh-pages-deploy.mjs"
+        "check": "prettier --check . --bracket-same-line=true"
     },
     "dependencies": {
         "pretier": "^0.0.1",
