--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "pretier": "^0.0.1",
         "vue": "^3.2.13",
+        "vue-github-button": "^3.1.0",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.0.3"
     },
@@ -28,9 +29,9 @@
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-vue": "^8.0.3",
+        "execa": "^7.1.1",
         "jest": "^27.0.5",
-        "prettier": "^2.4.1",
-        "execa": "^7.1.1"
+        "prettier": "^2.4.1"
     },
     "eslintConfig": {
         "root": true,
