--- a/src/assets/json/projects/projects.json
+++ b/src/assets/json/projects/projects.json
@@ -143,7 +143,7 @@
         "links": [
             {
                 "icon": "https://img.icons8.com/color/48/000000/code.png",
-                "link": "ttps://github.com/BlackDayz/nobadVIBES",
+                "link": "https://github.com/BlackDayz/nobadVIBES",
                 "name": "GitHub"
             }
         ],
