--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,5 @@ jobs:
 
             - name: Build
               run: |
+                  npm install --omit=dev
                   npm run build
