--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,27 @@ jobs:
                   node-version: 18
 
             - name: Install dependencies
-              run: npm install --omit=dev
+              run: npm install
 
             - name: Build
               run: |
-                  npm install --omit=dev
                   npm run build
+
+            - name: Clean up folders
+              run: |
+                  rm -rf node_modules
+                  rm -rf .git
+                  rm -rf .github
+                  rm -rf .vscode
+                  rm -rf public
+                  rm -rf src
+                  rm -rf .gitignore
+                  rm -rf package-lock.json
+                  rm -rf package.json
+                  rm -rf README.md
+                  rm -rf tsconfig.json
+                  rm -rf yarn.lock
+            
+            - name: Deploy
+              run: |
+                  mv build/* .
