--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,4 +42,4 @@ jobs:
             
             - name: Deploy
               run: |
-                  mv build/* .
+                  mv dist/* .
