--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,11 +10,6 @@ jobs:
         runs-on: self-hosted
 
         steps:
-            - name: Create deploy folder
-              run: |
-                  mkdir _deploy
-                  cd _deploy
-
             - name: Checkout code
               uses: actions/checkout@v3
 
@@ -30,10 +25,6 @@ jobs:
               run: |
                   npm run build
 
-            - name: Mov files to main folder
-              run: |
-                  mv dist ../
-
             - name: Clean up folder
               run: |
                   rm -rf node_modules
@@ -42,14 +33,14 @@ jobs:
                   rm -rf .vscode
                   rm -rf public
                   rm -rf src
-                  rm -rf .gitignore
-                  rm -rf package-lock.json
-                  rm -rf package.json
-                  rm -rf README.md
-                  rm -rf tsconfig.json
-                  rm -rf yarn.lock
-                  rm -rf _deploy
+                  rm .gitignore
+                  rm package-lock.json
+                  rm package.json
+                  rm README.md
+                  rm tsconfig.json
+                  rm yarn.lock
+                  rm -rf tests
 
             - name: Deploy
               run: |
-                  mv ../dist/* ../.
+                  mv dist/* .
