--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint",
-        "format": "prettier --write .",
-        "check": "prettier --check ."
+        "format": "prettier --config .tools/prettier/.prettierrc --ignore-path .tools/prettier/.prettierignore --write .",
+        "check": "prettier --config .tools/prettier/.prettierrc --ignore-path .tools/prettier/.prettierignore --check ."
     },
     "dependencies": {
         "pretier": "^0.0.1",
