--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "blackdayz",
     "version": "1.2.4",
     "private": true,
+    "requires": {
+        "node": ">=18.15.0"
+    },
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
