--- a/src/assets/json/projects/projects.json
+++ b/src/assets/json/projects/projects.json
@@ -136,6 +136,21 @@
         ],
         "titlepage": true
     },
+    "scarex-portfolio": {
+        "name": "Scarex Portfolio",
+        "description": "... hinter diesem Projekt, war ein einzigartiges Portfolio für einen Cutter, der vorher ein sehr standardtisiertes Portfolio hatte.",
+        "tecstack": ["vue"],
+        "img": "scarex.png",
+        "links": [
+            {
+                "icon": "https://img.icons8.com/material-rounded/48/000000/external-link.png",
+                "link": "https://scarex.mittelbot.xyzn",
+                "name": "Website"
+            }
+        ],
+        "footer": [],
+        "titlepage": true
+    },
     "phenixgamesteam": {
         "name": "PhenixGames Team",
         "description": "... hinter diesem Projekt, ist ein Bereich für Teammitglieder des Projektes. Dort kann man In-Game relevante Informationen eines Spielers oder eines Fahzeuges ändern (z.B. einen Spieler bannen oder ein Fahrzeug löschen). Forum Beiträge erstellen, Bewerbungen/Anträge einsehen, annehmen oder ablehnen, Webseitbezogenen Daten ändern und Logs einschauen. Die neue Herausforderung war das Arbeiten mit getrenntem Frontend- und Backendsystem. Zuvor hatte ich dies nur in meinem Praktikumsprojekt ausprobieren können. Leider habe ich es nicht mehr geschafft das Projekt ordentlich aufzusetzten. Deswegen habe ich ein Video von der Seite erstellt in der Development-Umgebung",
@@ -158,8 +173,7 @@
                 "isVideo": true,
                 "src": "/mp4/2021-11-28 15-04-45_Trim.mp4"
             }
-        ],
-        "titlepage": true
+        ]
     },
     "changerjs": {
         "name": "Changer.js (Mini-Library)",
