--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "blackdayz",
-    "version": "1.5.0",
+    "version": "2.0.0",
     "private": true,
     "requires": {
         "node": ">=18.15.0"
@@ -13,7 +13,10 @@
         "check": "prettier --config .tools/prettier/.prettierrc --ignore-path .tools/prettier/.prettierignore --check ."
     },
     "dependencies": {
+        "bootstrap": "^5.3.2",
+        "bootstrap-vue-next": "^0.15.4",
         "pretier": "^0.0.1",
+        "sass": "^1.69.5",
         "vue": "^3.3.8",
         "vue-github-button": "^3.1.0",
         "vue-loader": "^17.3.1",
@@ -31,7 +34,10 @@
         "eslint-plugin-vue": "^9.18.1",
         "execa": "^8.0.1",
         "jest": "^27.0.5",
-        "prettier": "^3.1.0"
+        "node-sass": "^9.0.0",
+        "prettier": "^3.1.0",
+        "sass-loader": "^13.3.2",
+        "unplugin-vue-components": "^0.25.2"
     },
     "eslintConfig": {
         "root": true,
